nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  labels:
    app: nextcloud
    tier: frontend
spec:
  tls:
    - hosts:
      - nextcloud.app.graysons.network
  rules:
    - host: "nextcloud.app.graysons.network"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
